# mercury_steamvr_driver

./: .gitignore  .gitmodules  CMakeLists.txt  grayscale_keypoint_jan18.onnx  notes.txt  readme.md  vcpkg.json
attic/: T20_config.json  camera_demo.cpp  camera_mush.py  camera_mush_hack.py  escapi_test.cpp  gesture_protocol_pseudo.json  moshi_build.ps1  moshi_debug.ps1  moshi_get_onnxruntime.ps1  moshi_incremental_build_thingy.ps1  rename.ipynb  subprocess_compile_and_restart.py  timestamps.ipynb  videoInput.cpp
attic/cs_test/: CMakeLists.txt  cs_test.cpp  cs_test_subprocess.cpp
attic/input_test/: CMakeLists.txt  server_input_test.cpp
doc/: camera_stuff.md  notes.txt  timestamps.md  timestampsgpt.md  timestampsgpt_2.md
src/: CMakeLists.txt  camera_demo.cpp  camera_demo_2.cpp  cap_dshow.cpp  capture.h  main.cpp  simple_test.cpp  simple_test_ivrtrackedcamera.cpp  videoInput.cpp  videoInput.h
src/steamvr_driver/: CMakeLists.txt  copy_assets.py  copy_plugin.py  debouncer.hpp  device_provider.cpp  device_provider.h  driver.vrdrivermanifest  driver_factory.cpp  everything_else_decider.cpp  everything_else_decider.hpp  get_finger_curls.cpp  get_finger_curls.hpp  mercury_device.cpp  mercury_device.h  oxr_sdl2_hack.c  oxr_sdl2_hack.h  pinch_decider.hpp  stdafx.cpp  stdafx.h  steamvr.vrsettings  steamvr_dllmain.cpp  steamvr_thingy.hpp  tracking_subprocess.cpp  tracking_subprocess_protocol.hpp
src/steamvr_driver/mercury/: driver.vrdrivermanifest
src/steamvr_driver/mercury/resources/: driver.vrresources
src/steamvr_driver/mercury/resources/bindings/: steamvr_home.json
src/steamvr_driver/mercury/resources/input/: index_controller_profile.json  legacy_bindings_mercury.json  legacy_bindings_mercury_hands.json  mercury_controller_input.json  mercury_profile.json
src/steamvr_driver/mercury/resources/internal/: .gitignore
src/steamvr_driver/mercury/resources/internal/hand-tracking-models/: grayscale_detection_160x160.onnx  grayscale_keypoint_jan18.onnx
src/steamvr_driver/mercury/resources/rendermodels/mercury_left/: mercury_left.json
src/steamvr_driver/mercury/resources/rendermodels/mercury_right/: mercury_right.json
src/steamvr_driver/mercury/resources/settings/: default.vrsettings
src/steamvr_driver/resources/: driver.vrresources  driver.vrresources.license
src/steamvr_driver/resources/icons/: headset_monado_status_ready_alert.png.license
src/steamvr_driver/resources/localization/: localization.json  localization.json.license
src/steamvr_driver/resources/settings/: default.vrsettings
src/steamvr_driver/util/: bones.cpp  bones.h  driver_log.cpp  path_utils.cpp  path_utils.h  video_input.cpp  video_input.h  vr_utils.cpp  vr_utils.h  win_utils.cpp  win_utils.h
src/util/: CMakeLists.txt  CameraIdxGuesser.cpp  CameraIdxGuesser.hpp  CameraIdxGuesser_win_capture.h  driver_log.cpp  driver_log.h  u_subprocess_logging.c  u_subprocess_logging.h
